update configuration to work with REST API v2.0.0 (SPI v2 still to be done)